# tetris

./: .gitignore  README.md  stack.yaml  tetris.cabal
app/: Figures.hs  Main.hs
src/: Config.hs  Drawing.hs  Figures.hs  Game.hs  Lib.hs  Util.hs  World.hs
