name:                tetris
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Tkachenko
maintainer:          skyalexx@gmail.com
copyright:           2010 Author Here
category:            Desktop
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config, Figures, World, Drawing, Game, Util
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , mtl
                     , containers
                     , array
                     , random
  default-language:    Haskell2010

executable tetris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tetris
                     , gloss
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/skya1ex/tetris
